syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mimos.wallet.base.rpc.wallet_path";
option java_outer_classname = "WalletPathWrapper";

package MimosWallet;

import "grpc_response.proto";

message WalletPathReq {

    int64 id = 1;

    int64 accountId = 2;

    string walletPath = 3;

    string pubKey = 4;

    int64 chainId = 5;

    int64 create_time = 6;

}

message WalletPathListReq {
    repeated WalletPathReq items = 1;
}

service WalletPathGreeter{
    rpc report (WalletPathReq) returns (BaseGrpcResponse) {}
    rpc reportList (WalletPathListReq) returns (BaseGrpcResponse) {}
}